# esp-fan-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.prod
.github/workflows/: build.yml  codeql-analysis.yml  release.yml
components/ds18b20_group/: CMakeLists.txt  Kconfig
components/ds18b20_group/include/: ds18b20_group.h
components/ds18b20_group/src/: ds18b20_group.c  ds18b20_group.h
components/pc_fan/: CMakeLists.txt
components/pc_fan/include/: pc_fan_control.h
components/pc_fan/src/: pc_fan_control.c
components/pc_fan_control/: CMakeLists.txt
components/pc_fan_control/include/: pc_fan_control.h
components/pc_fan_control/src/: pc_fan_control.c
components/serialization/: CMakeLists.txt
components/serialization/include/: serialization.h  serialization_cjson.h  serialization_context.hpp  serialization_context_cjson.h  serialization_context_cjson.hpp  serialization_context_nvs.hpp  serialization_functions.h  serialization_nvs.h
components/serialization/src/: serialization.c  serialization.cpp  serialization_cjson.c  serialization_context_cjson.cpp  serialization_context_nvs.cpp  serialization_nvs.c
include/: Average.h  Pwm.h  Rpm.h  SensorData.h  Values.h  httpd_json.h
lib/appconfig/: app_config.cpp  app_config.h  app_config_json.h
lib/apptemps/: app_temps.cpp  app_temps.h
lib/cputemp/: cpu_temp.cpp  cpu_temp.h
lib/rpm/: CircularBuffer.h  Rpm.cpp  Rpm.h  RpmCounter.cpp  RpmCounter.h  RpmCounterCircularBuffer.h  rpm_counter.cpp  rpm_counter.h  rpm_counter_circular_buffer.h
lib/temperatures/: temperatures.h
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.cpp  app_config.h  app_main.c  app_status.c  app_status.h  ds18b20_group.c  ds18b20_group.h  fan_control.c  fan_control.cpp  fan_control.h  http.cpp  main.cpp  metrics.cpp  metrics.h  shadow_state.cpp  shadow_state.h  shadow_state_gpio.cpp  shadow_state_gpio.h  temperature_sensors.c  temperature_sensors.h  web_server.c  web_server.h
main/util/: util_append.c
old_lib/: http.cpp_  hw_config.cpp
old_lib/appconfig/: app_config.h
old_lib/apptemps/: app_temps.cpp
old_lib/cputemp/: cpu_temp.cpp
old_lib/include/: Pwm.h
old_lib/rpm/: rpm_counter.cpp  rpm_counter.h  rpm_counter_circular_buffer.h
src/: Rpm.cpp  Values.cpp  Values.h  app_config.h  ble.cpp  ble_adv.cpp  config.h  http.cpp  main.cpp  state.h  version.h
